--- a/TimberLog.lpi
+++ b/TimberLog.lpi
@@ -18,7 +18,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MinorVersionNr Value="1"/>
-      <BuildNr Value="536"/>
+      <BuildNr Value="598"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -32,54 +32,57 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="15">
+    <RequiredPackages Count="16">
       <Item1>
-        <PackageName Value="lazmrumenu"/>
+        <PackageName Value="uniqueinstance_package"/>
       </Item1>
       <Item2>
-        <PackageName Value="sqlite3laz"/>
+        <PackageName Value="lazmrumenu"/>
       </Item2>
       <Item3>
-        <PackageName Value="rx"/>
+        <PackageName Value="sqlite3laz"/>
       </Item3>
       <Item4>
-        <PackageName Value="gradcontrols"/>
+        <PackageName Value="rx"/>
       </Item4>
       <Item5>
-        <PackageName Value="dcpcrypt"/>
+        <PackageName Value="gradcontrols"/>
       </Item5>
       <Item6>
-        <PackageName Value="SearchBarPackage"/>
+        <PackageName Value="dcpcrypt"/>
       </Item6>
       <Item7>
-        <PackageName Value="ZVDateTimeCtrls"/>
+        <PackageName Value="SearchBarPackage"/>
       </Item7>
       <Item8>
-        <PackageName Value="SynEdit"/>
+        <PackageName Value="ZVDateTimeCtrls"/>
       </Item8>
       <Item9>
-        <PackageName Value="richmemopackage"/>
+        <PackageName Value="SynEdit"/>
       </Item9>
       <Item10>
-        <PackageName Value="FCL"/>
+        <PackageName Value="richmemopackage"/>
       </Item10>
       <Item11>
-        <PackageName Value="SQLDBLaz"/>
+        <PackageName Value="FCL"/>
       </Item11>
       <Item12>
-        <PackageName Value="RunTimeTypeInfoControls"/>
+        <PackageName Value="SQLDBLaz"/>
       </Item12>
       <Item13>
-        <PackageName Value="KControlsLaz"/>
+        <PackageName Value="RunTimeTypeInfoControls"/>
       </Item13>
       <Item14>
-        <PackageName Value="lazmxstorage"/>
+        <PackageName Value="KControlsLaz"/>
       </Item14>
       <Item15>
-        <PackageName Value="LCL"/>
+        <PackageName Value="lazmxstorage"/>
       </Item15>
+      <Item16>
+        <PackageName Value="LCL"/>
+      </Item16>
     </RequiredPackages>
-    <Units Count="21">
+    <Units Count="20">
       <Unit0>
         <Filename Value="TimberLog.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -107,108 +110,100 @@
         <UnitName Value="unitStartFunctions"/>
       </Unit3>
       <Unit4>
-        <Filename Value="dmunitconnecttransaction.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="dmConnectTransaction"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="DataModule"/>
-        <UnitName Value="dmUnitConnectTransaction"/>
-      </Unit4>
-      <Unit5>
         <Filename Value="dmunitsourcequery.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="dmSourceQuery"/>
+        <ComponentName Value="dmDBTools"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="DataModule"/>
-        <UnitName Value="dmUnitSourceQuery"/>
-      </Unit5>
-      <Unit6>
+        <UnitName Value="dmUnitDBTools"/>
+      </Unit4>
+      <Unit5>
         <Filename Value="unitclasslogbook.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitClassLogbook"/>
-      </Unit6>
-      <Unit7>
+      </Unit5>
+      <Unit6>
         <Filename Value="unitrecordlogmetadata.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitRecordLogMetadata"/>
-      </Unit7>
-      <Unit8>
+      </Unit6>
+      <Unit7>
         <Filename Value="unitdefinitions.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitDefinitions"/>
-      </Unit8>
-      <Unit9>
+      </Unit7>
+      <Unit8>
         <Filename Value="formunitlogbook.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="formLogbook"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formUnitLogbook"/>
-      </Unit9>
-      <Unit10>
+      </Unit8>
+      <Unit9>
         <Filename Value="unitrecordlogmetadataext.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitRecordLogMetadataExt"/>
-      </Unit10>
-      <Unit11>
+      </Unit9>
+      <Unit10>
         <Filename Value="dmunitcrypt.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="dmCrypt"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="DataModule"/>
         <UnitName Value="dmUnitCrypt"/>
-      </Unit11>
-      <Unit12>
+      </Unit10>
+      <Unit11>
         <Filename Value="unittypetile.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frameTypeTile"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="unitTypeTile"/>
-      </Unit12>
-      <Unit13>
+      </Unit11>
+      <Unit12>
         <Filename Value="unittablecategories.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitTableCategories"/>
-      </Unit13>
-      <Unit14>
+      </Unit12>
+      <Unit13>
         <Filename Value="unittableentries.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitTableEntries"/>
-      </Unit14>
-      <Unit15>
+      </Unit13>
+      <Unit14>
         <Filename Value="unittablesettings.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitTableSettings"/>
-      </Unit15>
-      <Unit16>
+      </Unit14>
+      <Unit15>
         <Filename Value="unittableusers.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitTableUsers"/>
-      </Unit16>
-      <Unit17>
+      </Unit15>
+      <Unit16>
         <Filename Value="unittabletemplates.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitTableTemplates"/>
-      </Unit17>
-      <Unit18>
+      </Unit16>
+      <Unit17>
         <Filename Value="unitguihelper.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="unitGUIHelper"/>
-      </Unit18>
-      <Unit19>
+      </Unit17>
+      <Unit18>
         <Filename Value="mrumanager.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="mrumanager"/>
-      </Unit19>
-      <Unit20>
+      </Unit18>
+      <Unit19>
         <Filename Value="unitrecenttile.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frameRecentTile"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Frame"/>
         <UnitName Value="unitRecentTile"/>
-      </Unit20>
+      </Unit19>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -222,6 +217,9 @@
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
